--- a/package.json
+++ b/package.json
@@ -59,21 +59,25 @@
     "publish:all": "npm run build:all && npm run vsce:package && npm run vsce:publish"
   },
   "dependencies": {
-    "@tailwindcss/vite": "^4.1.11",
-    "node-fetch": "^3.3.2",
-    "tailwindcss": "^4.1.11",
-    "vue": "^3.5.17",
-    "vue-router": "^4.5.1"
+    "@heroicons/vue": "^2.2.0",
+    "@tailwindcss/postcss": "4.1.11",
+    "node-fetch": "3.3.2",
+    "vue": "3.5.18",
+    "vue-router": "4.5.1"
   },
   "devDependencies": {
-    "@types/node": "^24.0.13",
-    "@types/vscode": "^1.102.0",
-    "@vitejs/plugin-vue": "^6.0.0",
-    "@vue/tsconfig": "^0.7.0",
-    "concurrently": "^9.2.0",
-    "typescript": "~5.8.3",
-    "vite": "^7.0.4",
-    "vue-tsc": "^2.2.12"
+    "@types/node": "24.1.0",
+    "@types/vscode": "1.102.0",
+    "@vitejs/plugin-vue": "6.0.0",
+    "@vue/tsconfig": "0.7.0",
+    "autoprefixer": "10.4.21",
+    "concurrently": "9.2.0",
+    "daisyui": "^5.0.47",
+    "postcss": "8.5.6",
+    "tailwindcss": "4.1.11",
+    "typescript": "5.8.3",
+    "vite": "7.0.6",
+    "vue-tsc": "3.0.4"
   },
   "publisher": "IssueFlowVSE",
   "icon": "icon.png",
